Chapter_4/my-service-endpoint.yaml
#chapter_4.2.2
apiVersion: v1
kind: Endpoints
metadata:
  name: my-service
subsets:
- addresses:
  - IP: 1.2.3.4 #可以制定外部后端服务地址和端口
  ports:
  - port: 80
#由于之前创建了不带Label Selector的Service无法选择后端Pod，所以需要手动创建Endpoint，要与Service同名，用于指向实际后端访问地址
