Chapter_4/my-service-nolabelselector.yaml
#chapter_4.2.2
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
#创建无Label Selector的Service实现连接外部服务的Service，需手动创建Endpoint
