Chapter_4/weapp-multiport.yaml
#chapter_4.2.1
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: web
  - port: 8005
    targetPort: 8005
    name: management
  selector:
    app: webapp
#设置两个端口号，并分别命名
